# pybob

./: .gitignore  1  Makefile  README.md  database.db  poetry-show.txt  pyproject.toml  tree.txt
bob/: bob.py
bob/imagem/: con.py  t.py
bob/module/: distancia.py  mandir.py  modelo_clima.py  modelo_radio.py  modelo_renomear.py  modelo_texto.py  shcmd.py  toolbarinit.py  zzfuncao.sh
bob/module/menu/: menu_main.py
bob/module/menu/contatos/: madicionar.py  mbuscar.py  mcriarbd.py  mdeletar.py  mdeletartodos.py  meditar.py  menu_contatos.py  mlistar.py
bob/module/menu/financeiro/: mcripto.py  menu_financas.py  mtermos.py
bob/module/menu/instalacao/: mdiversos.py  menu_instalacao.py  merros.py  mfontes.py  mgdriver.py  mlamp.py  monedriver.py  mpkg.py
bob/module/menu/lembretes/: madicionar.py  mbuscar.py  mcriarbd.py  mdeletar.py  mdeletartodos.py  meditar.py  menu_lembrete.py  mlistar.py
bob/module/menu/manutecao/: meddisco.py  menu_manutencao.py  mgrafcpu.py  mmemoreal.py  mmonitorix.py  mmonitrede.py  mmonitso.py  mtestegraf.py  mteststress.py
bob/module/menu/principal/: marquivo.py  mcheat.py  mclima.py  mdjango.py  menu_principal.py  mevolucao.py  mprotela.py  mradio.py  msair.py  mservice.py  mzzz.py
bob/views/: bg2.ppm  database.db  res.py  t.py  t1.py  ui_main.py  ui_settings.py
bob/views/ui_model/: modelo.py  modelo_binario.py  modelo_clima.py  toolbarinit.py
bob/views/ui_model/menu/: menu_main.py
bob/views/ui_model/menu/contatos/: madicionar.py  mbuscar.py  mcriarbd.py  (+5 more)
docs/: comandos.txt  docs-git.txt  docs-poetry.txt  docs-pyenv.txt
tests/: clock.py  test_pybob.py  tt.py  tt1.py
(+39 files in other folders)
