[tool.poetry]
name = "pybob"
version = "0.1.0"
description = "pybob"
authors = ["Elizeu de Santana <elizeudesantana@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pyside6 = {path = "PySide6-6.2.4-6.2.4-cp36.cp37.cp38.cp39.cp310-abi3-manylinux1_x86_64.whl"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
blue = "^0.9.1"
isort = "^5.10.1"
mypy = "^0.982"
mkdocs = "^1.4.1"
prospector = "^1.7.7"
pip-audit = "^2.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
